--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "reearth-plugin-toolbox",
+  "name": "reearth-plugin-basic-sidebar",
   "version": "0.1.0",
   "license": "MIT",
   "private": true,
   "type": "module",
-  "main": "./dist/reearth-plugin-toolbox.js",
+  "main": "./dist/reearth-plugin-basic-sidebar.js",
   "engines": {
     "node": ">=16"
   },
   "scripts": {
-    "start:starter": "vite -c vite.config.starter-web.ts",
     "build": "run-s typecheck clean build:web build:plugin",
     "build:plugin": "run-s build:sidebar",
     "build:web": "run-s build:sidebar-web",
-    "build:starter": "vite build -c vite.config.starter.ts",
-    "build:starter-web": "vite build -c vite.config.starter-web.ts",
     "package": "run-s build zip",
     "typecheck": "tsc",
     "test": "vitest",
@@ -40,7 +37,6 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-react": "^1.3.2",
-    "antd": "^4.23.1",
     "archiver": "^5.3.1",
     "del-cli": "^5.0.0",
     "eslint": "^8.16.0",
@@ -68,12 +64,10 @@
     "write-pkg": "^5.1.0",
     "yml": "^1.0.0"
   },
-  "msw": {
-    "workerDirectory": "web/mock"
-  },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@types/lodash": "^4.14.185"
+    "@chakra-ui/react": "^2.3.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "framer-motion": "^7.3.5"
   }
 }
