--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "node": ">=16"
   },
   "scripts": {
-    "start:starter": "vite -c vite.config.starter-web.ts",
+    "start": "vite -c vite.config.sidebar-web.ts",
     "build": "run-s typecheck clean build:web build:plugin",
-    "build:plugin": "run-s build:sidebar",
-    "build:web": "run-s build:sidebar-web",
-    "build:starter": "vite build -c vite.config.starter.ts",
-    "build:starter-web": "vite build -c vite.config.starter-web.ts",
+    "build:plugin": "vite build -c vite.config.sidebar.ts",
+    "build:web": "vite build -c vite.config.sidebar-web.ts",
     "package": "run-s build zip",
     "typecheck": "tsc",
     "test": "vitest",
@@ -24,56 +22,42 @@
     "type": "tsc",
     "zip": "node ./scripts/zip.mjs",
     "createwidget": "node ./scripts/createwidget.mjs",
-    "clean": "del dist",
-    "start:sidebar": "vite -c vite.config.sidebar-web.ts",
-    "build:sidebar": "vite build -c vite.config.sidebar.ts",
-    "build:sidebar-web": "vite build -c vite.config.sidebar-web.ts"
+    "clean": "del dist"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/node": "^17.0.35",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.2",
+    "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "@vitejs/plugin-react": "^1.3.2",
-    "antd": "^4.23.1",
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^2.0.0",
+    "antd": "^4.23.2",
     "archiver": "^5.3.1",
     "del-cli": "^5.0.0",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-testing-library": "^5.5.1",
-    "jsdom": "^19.0.0",
-    "json-to-pretty-yaml": "^1.2.2",
-    "load-pkg": "^4.0.0",
-    "msw": "^0.41.0",
+    "eslint": "^8.21.0",
+    "eslint-config-reearth": "^0.1.0",
+    "jsdom": "^20.0.0",
+    "msw": "^0.44.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "typescript": "^4.7.2",
-    "vite": "^2.9.9",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup-plugin-visualizer": "^5.7.1",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4",
     "vite-plugin-cdn-import": "^0.3.5",
-    "vite-plugin-externals": "^0.5.1",
-    "vite-plugin-singlefile": "^0.9.0",
+    "vite-plugin-dts": "^1.4.1",
+    "vite-plugin-singlefile": "^0.11.0",
     "vite-plugin-svgr": "^2.2.1",
-    "vitest": "^0.12.9",
-    "write-pkg": "^5.1.0",
+    "vitest": "^0.20.3",
     "yml": "^1.0.0"
   },
+  "dependencies": {},
   "msw": {
     "workerDirectory": "web/mock"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@types/lodash": "^4.14.185"
   }
 }
